adding up to the project

--- a/index.html
+++ b/index.html
@@ -214,18 +214,28 @@
             <div class="col-four">
                 <div class="four-container">
                     <section>
-                        <center><head>our friends and supporters</head></center>
+                        <center><head id="cent-head">our friends and supporters</head></center>
                         <div class="con">
-                            <span>words cant explain<i class="fa fa-camera"></i><i class="fa fa-play"></i></span><br>
-                            <br><div>oh life is cool with coding oh life is cool with coding</div>
-                            <div class="explore"><a href="#" id="explore">explore more</a></div>
+                            <span id="control"><img width="200" src="https://smashing-delivery.herokuapp.com/catch?uri=https://res.cloudinary.com/indysigner/image/upload/v1559124022/ads/shutterstock-logo-with-icons.png" alt=""></span><br>
+                            <br><div id="old-bold">Out with the old, in with the bold.It's not stock, it's shutterstock.</div>
+                            <div class="explore"><a href="#" id="explore-fir">explore now!</a></div>
                         </div>
                     </section>
                 </div>
             </div>
             <div class="col-eight">
                 <div class="eight-container">
-
+                    <div class="icon-cont">
+                        <img src="https://d33wubrfki0l68.cloudfront.net/72280e1450d4ecfc45ef96ea00b27b4bf4ef5d06/eb759/images/smashing-cat/cat-smashing-tv-2.svg"
+                        alt="" height="250" width="50%"/>
+                        <a href=""><h1>1420 smashing members</h1></a>
+                        <p>A channel where seasoned developers show how they design,build,work and play
+                            .Coming up next: UX OPtimizations for keyboard-only and assistive technology
+                            users withAaron Pearlman (Jul 3)
+                        </p>
+                        <div class="upcoming-epi"><span><a href="#">explore features</a></span></div>
+                        <div class="sign-in"><span>already have an account?<a href="#" id="sign">sign in</a></span></div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -310,13 +320,171 @@
 
         <div class="jump-stack">
             <div class="top-im">
-
+                <center id="center-tag">
+                        <div class="comig-up">COMING UP NEXT - JULY 9 - 10</div>
+                        <div id="desc-header"><a href="#">JAMstack_conf_london</a></div>
+                        <p class="word">Serverless! lets explore how to design, build, debug and deploy fast, modern web
+                            projects that run on the JAM Stack. Plus practical full-day front-end workshops.
+                        </p>
+                </center>
+                <div class="explore-one"><a href="#" id="explore">explore all speakers and topics</a></div>
             </div>
             <div class="im-cont">
                 <img src="https://d33wubrfki0l68.cloudfront.net/f0cc4f374fb7edb5677c0e050c84a3f392b8eb8a/943f8/images/events/jamconf-full.svg"
                 alt="" height="100%" width="80%"/>
             </div>
         </div>
+        <div class="community-links">           
+            <Section class="main-community">
+                <img class="rotate-img" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
+                alt="" />
+                <div class="des-head">
+                    <h3>Person of the week</h3>
+                    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident officiis placeat necessitatibus assumenda accusamus ratione amet deserunt ipsam harum facilis beatae corporis deleniti, possimus alias, non sunt nihil laborum vero.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident officiis placeat necessitatibus assumenda accusamus ratione amet deserunt ipsam harum facilis beatae corporis deleniti, possimus alias, non sunt nihil laborum vero.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident officiis placeat necessitatibus assumenda accusamus ratione amet deserunt ipsam harum facilis beatae corporis deleniti, possimus alias, non sunt nihil laborum vero.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident officiis placeat necessitatibus assumenda accusamus ratione amet deserunt ipsam harum facilis beatae corporis deleniti, possimus alias, non sunt nihil laborum vero.
+                    </span>
+                </div>
+            </Section><br><br>
+            <section class="others-comm">
+                <article class="other-comm-article">
+                    <figure id="my-fig">
+                        <img id="other-img" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
+                        alt=""/>
+                        <figcaption>
+                            <span><a href="#">llya ranko</a>shared</span>
+                            <h3>SubsetCSS</h3>
+                        </figcaption>
+
+                    </figure>
+                    <p>
+                        <time>june 28, 2019</time> - <span>
+                            CSS can get unweildly sometimes.
+                        subset css helps alleviate this problem by enforcing your css
+                        to a predefined amount of values, keeping everyone on the same page
+                        a project evolves.
+                        </span>
+                    </p>
+                </article>
+                <article class="other-comm-article1">
+                    <figure id="my-fig">
+                        <img id="other-img" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
+                        alt=""/>
+                        <figcaption>
+                            <span><a href="#">llya ranko</a>shared</span>
+                            <h3>SubsetCSS</h3>
+                        </figcaption>
+
+                    </figure>
+                    <p>
+                        <time>june 28, 2019</time> - <span>
+                            CSS can get unweildly sometimes.
+                        subset css helps alleviate this problem by enforcing your css
+                        to a predefined amount of values, keeping everyone on the same page
+                        a project evolves.
+                        </span>
+                    </p>
+                </article>
+            </section>
+            <section class="others-comm">
+                <article class="other-comm-article">
+                    <figure id="my-fig">
+                        <img id="other-img" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
+                        alt=""/>
+                        <figcaption>
+                            <span><a href="#">llya ranko</a>shared</span>
+                            <h3>SubsetCSS</h3>
+                        </figcaption>
+
+                    </figure>
+                    <p>
+                        <time>june 28, 2019</time> - <span>
+                            CSS can get unweildly sometimes.
+                        subset css helps alleviate this problem by enforcing your css
+                        to a predefined amount of values, keeping everyone on the same page
+                        a project evolves.
+                        </span>
+                    </p>
+                </article>
+                <article class="other-comm-article1">
+                    <figure id="my-fig">
+                        <img id="other-img" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
+                        alt=""/>
+                        <figcaption>
+                            <span><a href="#">llya ranko</a>shared</span>
+                            <h3>SubsetCSS</h3>
+                        </figcaption>
+
+                    </figure>
+                    <p>
+                        <time>june 28, 2019</time> - <span>
+                            CSS can get unweildly sometimes.
+                        subset css helps alleviate this problem by enforcing your css
+                        to a predefined amount of values, keeping everyone on the same page
+                        a project evolves.
+                        </span>
+                    </p>
+                </article>
+            </section>
+            <section class="others-comm">
+                <article class="other-comm-article">
+                    <figure id="my-fig">
+                        <img id="other-img" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
+                        alt=""/>
+                        <figcaption>
+                            <span><a href="#">llya ranko</a>shared</span>
+                            <h3>SubsetCSS</h3>
+                        </figcaption>
+
+                    </figure>
+                    <p>
+                        <time>june 28, 2019</time> - <span>
+                            CSS can get unweildly sometimes.
+                        subset css helps alleviate this problem by enforcing your css
+                        to a predefined amount of values, keeping everyone on the same page
+                        a project evolves.
+                        </span>
+                    </p>
+                </article>
+                <article class="other-comm-article1">
+                    <figure id="my-fig">
+                        <img id="other-img" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
+                        alt=""/>
+                        <figcaption>
+                            <span><a href="#">llya ranko</a>shared</span>
+                            <h3>SubsetCSS</h3>
+                        </figcaption>
+
+                    </figure>
+                    <p>
+                        <time>june 28, 2019</time> - <span>
+                            CSS can get unweildly sometimes.
+                        subset css helps alleviate this problem by enforcing your css
+                        to a predefined amount of values, keeping everyone on the same page
+                        a project evolves.
+                        </span>
+                    </p>
+                </article>
+            </section>
+        </div>
+        <div class="more-liks-twitter"><span>More Links oN Twitter</span>
+            <div id="hori"></div>
+        </div>
+        <section class="design-systems">
+            <div id="design-systems-container">
+                <div id="main-design">
+                    <h3 id="feat-sys">Featured Smashing Book</h3>
+                    <h1 id="design-sys">Design Systems</h1><div id="bar"></div>
+                    <span id="design-desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda itaque harum modi quidem possimus ab alias provident, voluptas quam at aut commodi labore accusamus placeat tempore, aliquid fugiat quibusdam minima.</span>
+                    <div id="t-b-contents"><span>table of contents</span></div>
+                </div>
+                <div id="logo-design">
+                    <img id="des-log-img" src="https://res.cloudinary.com/indysigner/image/upload/v1542959380/shop/design-systems-hardcover-book.png" 
+                    alt="" height="360" width="60%"/>
+                </div>
+            </div>
+        </section>
         <!-- end main -->
     </main>
     <footer id="myfooter">
