resolved section,article, header conflict along with 7 containers in the nav

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </header>
     <main id="main">
         <!-- begin main -->
-        <div class="featured-articles-container">
+        <section class="featured-articles-container">
             <!-- begin article-container-->
             <h1 id="featured-articles-heading">
                 <span>
@@ -183,8 +183,8 @@
                 <!-- end article-->
             </article>
             <!-- end article-container -->
-        </div>
-        <div class="latest-post">
+        </section>
+        <section class="latest-post">
             <!--begin latest-post -->
             <section class="col-4">
                 <div class="section-container">
@@ -227,8 +227,8 @@
                 </div>
             </section>
             <!--end latest-post -->
-        </div>
-        <div class="col-4-8-container">
+        </section>
+        <section class="col-4-8-container">
             <div class="col-four">
                 <section class="four-container">
                     <center class="cent-head"><head >our friends and supporters</head></center>
@@ -255,8 +255,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="latest-post">
+        </section>
+        <section class="latest-post">
             <!--begin latest-post -->
             <section class="col-4">
                 <div class="section-container">
@@ -296,8 +296,8 @@
                 </div>
             </section>
             <!--end latest-post -->
-        </div>
-        <div class="col-4-8-container">
+        </section>
+        <section class="col-4-8-container">
             <div class="col-four">
                 <section class="col-4">
                     <div class="section-container">
@@ -315,7 +315,7 @@
             </div>
             <div class="col-eight">
                 <div class="eight-container">
-                    <div class="icon-cont">
+                    <article class="icon-cont">
                         <img src="https://d33wubrfki0l68.cloudfront.net/72280e1450d4ecfc45ef96ea00b27b4bf4ef5d06/eb759/images/smashing-cat/cat-smashing-tv-2.svg"
                         alt="" height="250" width="50%"/>
                         <a class="remove-under" href=""><h1>New on smashing tv</h1></a>
@@ -325,7 +325,7 @@
                         </p>
                         <div class="upcoming-epi"><span><a href="#">see all upcoming episodes</a></span></div>
                         <div class="sign-in"><span>already have an account?<a href="#" id="sign">sign in</a></span></div>
-                    </div>
+                    </article>
                 </div>
             </div>
             <div class="all-articles">
@@ -333,38 +333,38 @@
                 <div id="line"></div>
             </div>
 
-        </div>
+        </section>
 
-        <div class="jump-stack">
-            <div class="top-im">
-                <section id="center-tag">
+        <section class="jump-stack">
+            <section class="top-im">
+                <article id="center-tag">
                         <h2 class="comig-up">COMING UP NEXT - JULY 9 - 10</h2>
                         <div class="desc-header"><a href="#">JAMstack_conf_london</a></div>
                         <p class="word">Serverless! lets explore how to design, build, debug and deploy fast, modern web
                             projects that run on the JAM Stack. Plus practical full-day front-end workshops.
                         </p>
-                </section>
+                </article>
                 <div class="explore-one"><a href="#" id="explore">explore all speakers and topics</a></div>
-            </div>
+            </section>
             <div class="im-cont">
                 <img src="https://d33wubrfki0l68.cloudfront.net/f0cc4f374fb7edb5677c0e050c84a3f392b8eb8a/943f8/images/events/jamconf-full.svg"
                 alt="" height="100%" width="80%"/>
             </div>
-        </div>
-        <div class="community-links">
-            <Section class="main-community">
+        </section>
+        <section class="community-links">
+            <section class="main-community">
                 <img class="rotate-img" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
                 alt="" />
-                <div class="des-head">
+                <article class="des-head">
                     <h3>Person of the week</h3>
                     <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident officiis placeat necessitatibus assumenda accusamus ratione amet deserunt ipsam harum facilis beatae corporis deleniti, possimus alias, non sunt nihil laborum vero.
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident officiis placeat necessitatibus assumenda accusamus ratione amet deserunt ipsam harum facilis beatae corporis deleniti, possimus alias, non sunt nihil laborum vero.
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident officiis placeat necessitatibus assumenda accusamus ratione amet deserunt ipsam harum facilis beatae corporis deleniti, possimus alias, non sunt nihil laborum vero.
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident officiis placeat necessitatibus assumenda accusamus ratione amet deserunt ipsam harum facilis beatae corporis deleniti, possimus alias, non sunt nihil laborum vero.
                     </span>
-                </div>
-            </Section><br><br><br>
-            <section class="others-comm">
+                </article>
+            </section><br><br><br>
+            <article class="others-comm">
                 <article class="other-comm-article">
                     <figure id="my-fig">
                         <img id="other-img" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
@@ -403,7 +403,7 @@
                         </span>
                     </p>
                 </article>
-            </section><br><br>
+            </article><br><br>
             <section class="others-comm">
                 <article class="other-comm-article">
                     <figure id="my-fig">
@@ -484,12 +484,12 @@
                     </p>
                 </article>
             </section>
-        </div>
-        <div class="more-liks-twitter"><span>More Links oN Twitter</span>
+        </section>
+        <section class="more-liks-twitter"><span>More Links oN Twitter</span>
             <div id="hori"></div>
-        </div>
+        </section>
         <section class="design-systems">
-            <div id="design-systems-container">
+            <article id="design-systems-container">
                 <div id="main-design">
                     <h3 id="feat-sys">Featured Smashing Book</h3>
                     <h1 id="design-sys">Design Systems</h1><div id="bar"></div>
@@ -500,13 +500,13 @@
                     <img id="des-log-img" src="https://res.cloudinary.com/indysigner/image/upload/v1542959380/shop/design-systems-hardcover-book.png"
                     alt="" height="360" width="60%"/>
                 </div>
-            </div>
+            </article>
         </section>
         <section id="curated-post-id">
-            <div id="curated-post-container">
+            <article id="curated-post-container">
                 <section id="first-id">
                     <small>Guides</small><br><br>
-                    <big>New frontend challenges to master</big>
+                    <h2>New frontend challenges to master</h2>
                     <ul class="dark-ul">
                         <li><a href="#">css grid layouts</a></li>
                         <li><a href="#">css grid layouts</a></li>
@@ -519,7 +519,7 @@
                 </section>
                 <section id="first-id">
                     <small>Guides</small><br><br>
-                    <big>Performance optimization and strategies</big>
+                    <h2>Performance optimization and strategies</h2>
                     <ul class="dark-ul">
                         <li><a href="#">css grid layouts</a></li>
                         <li><a href="#">css grid layouts</a></li>
@@ -532,7 +532,7 @@
                 </section>
                 <section id="first-id">
                     <small>Guides</small><br><br>
-                    <big>Improving workflow and data protection</big>
+                    <h2>Improving workflow and data protection</h2>
                     <ul class="dark-ul">
                         <li><a href="#">css grid layouts</a></li>
                         <li><a href="#">css grid layouts</a></li>
@@ -543,14 +543,14 @@
                         <li><a href="#">css grid layouts</a></li>
                     </ul>
                 </section>
-            </div>
+            </article>
         </section>
-        <div id="se-container">
-            <section id="continue-curated-post">
+        <section id="se-container">
+            <article id="continue-curated-post">
                 <div id="cont">
                     <section id="first-id">
                         <small>Guides</small><br><br>
-                        <big>Design pattern and checklist</big>
+                        <h2>Design pattern and checklist</h2>
                         <ul class="dark-ul">
                             <li><a href="#">css grid layouts</a></li>
                             <li><a href="#">css grid layouts</a></li>
@@ -562,8 +562,8 @@
                         </ul>
                     </section>
                 </div>
-            </section>
-            <section id="continue-icon">
+            </article>
+            <article id="continue-icon">
                 <div id="cont">
                     <h2>Smashing Newsletter</h2>
                     <p id="imagine">Imagine you wrote a beautiful song and no one discovered it.
@@ -581,14 +581,14 @@
                     </div>
                 </div>
                 <div></div>
-            </section>
-        </div>
-        <div class="space-white">
-            <div id="space-white">
-                <span>See all articles</span>
+            </article>
+        </section>
+        <section class="space-white">
+            <article id="space-white">
+                <h3 class="h3-art-head">See all articles</h3>
                 <div class="bar"></div>
-            </div>
-        </div>
+            </article>
+        </section>
         <!-- end main -->
     </main>
     <footer id="myfooter">
