--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <section class="col-4-8-container">
             <div class="col-four">
                 <section class="four-container">
-                    <center class="cent-head"><head >our friends and supporters</head></center>
+                    <div class="cent-head"><head >our friends and supporters</head></div>
                     <div class="con">
                         <span id="control"><img width="200" src="https://smashing-delivery.herokuapp.com/catch?uri=https://res.cloudinary.com/indysigner/image/upload/v1559313172/ads/shutterstock-logo-with-icons-white.png" alt=""></span><br>
                         <br><div id="old-bold">Out with the old, in with the bold.It's not stock, it's shutterstock.</div>
@@ -251,7 +251,7 @@
                             users withAaron Pearlman (Jul 3)
                         </p>
                         <div class="upcoming-epi"><span><a href="#">Explore features</a></span></div>
-                        <div class="sign-in"><span>already have an account?<a href="#" id="sign">sign in</a></span></div>
+                        <div class="sign-in"><span>already have an account?<a href="#" id="sign1">sign in</a></span></div>
                     </div>
                 </div>
             </div>
@@ -299,7 +299,7 @@
         </section>
         <section class="col-4-8-container">
             <div class="col-four">
-                <section class="col-4">
+                <div class="col-4">
                     <div class="section-container">
                         <span class="time-new"> 7 days ago</span>
                         <a href="" class="section-a">
@@ -311,14 +311,14 @@
                             Let's explore how we can load tem in a more optimize way.
                         </div>
                     </div>
-                </section>
+                </div>
             </div>
             <div class="col-eight">
                 <div class="eight-container">
                     <article class="icon-cont">
                         <img src="https://d33wubrfki0l68.cloudfront.net/72280e1450d4ecfc45ef96ea00b27b4bf4ef5d06/eb759/images/smashing-cat/cat-smashing-tv-2.svg"
                         alt="" height="250" width="50%"/>
-                        <a class="remove-under" href=""><h1>New on smashing tv</h1></a>
+                        <a class="remove-under" href=""><h2>New on smashing tv</h2></a>
                         <p>A channel where seasoned developers show how they design,build,work and play
                             .Coming up next: UX OPtimizations for keyboard-only and assistive technology
                             users withAaron Pearlman (Jul 3)
@@ -336,7 +336,7 @@
         </section>
 
         <section class="jump-stack">
-            <section class="top-im">
+            <div class="top-im">
                 <article id="center-tag">
                         <h2 class="comig-up">COMING UP NEXT - JULY 9 - 10</h2>
                         <div class="desc-header"><a href="#">JAMstack_conf_london</a></div>
@@ -345,10 +345,10 @@
                         </p>
                 </article>
                 <div class="explore-one"><a href="#" id="explore">explore all speakers and topics</a></div>
-            </section>
+            </div>
             <div class="im-cont">
-                <img src="https://d33wubrfki0l68.cloudfront.net/f0cc4f374fb7edb5677c0e050c84a3f392b8eb8a/943f8/images/events/jamconf-full.svg"
-                alt="" height="100%" width="80%"/>
+                <img class="img-h-w" src="https://d33wubrfki0l68.cloudfront.net/f0cc4f374fb7edb5677c0e050c84a3f392b8eb8a/943f8/images/events/jamconf-full.svg"
+                alt="" />
             </div>
         </section>
         <section class="community-links">
@@ -385,8 +385,8 @@
                     </p>
                 </article>
                 <article class="other-comm-article1">
-                    <figure id="my-fig">
-                        <img id="other-img" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
+                    <figure id="my-fig1">
+                        <img id="other-img1" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
                         alt=""/>
                         <figcaption>
                             <span><a href="#">llya ranko</a>shared</span>
@@ -406,8 +406,8 @@
             </article><br><br>
             <section class="others-comm">
                 <article class="other-comm-article">
-                    <figure id="my-fig">
-                        <img id="other-img" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
+                    <figure id="my-fig2">
+                        <img id="other-img2" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
                         alt=""/>
                         <figcaption>
                             <span><a href="#">llya ranko</a>shared</span>
@@ -425,8 +425,8 @@
                     </p>
                 </article>
                 <article class="other-comm-article1">
-                    <figure id="my-fig">
-                        <img id="other-img" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
+                    <figure id="my-fig3">
+                        <img id="other-img3" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
                         alt=""/>
                         <figcaption>
                             <span><a href="#">llya ranko</a>shared</span>
@@ -446,8 +446,8 @@
             </section><br><br>
             <section class="others-comm">
                 <article class="other-comm-article">
-                    <figure id="my-fig">
-                        <img id="other-img" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
+                    <figure id="my-fig4">
+                        <img id="other-img4" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
                         alt=""/>
                         <figcaption>
                             <span><a href="#">llya ranko</a>shared</span>
@@ -465,8 +465,8 @@
                     </p>
                 </article>
                 <article class="other-comm-article1">
-                    <figure id="my-fig">
-                        <img id="other-img" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
+                    <figure id="my-fig5">
+                        <img id="other-img5" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
                         alt=""/>
                         <figcaption>
                             <span><a href="#">llya ranko</a>shared</span>
@@ -492,13 +492,13 @@
             <article id="design-systems-container">
                 <div id="main-design">
                     <h3 id="feat-sys">Featured Smashing Book</h3>
-                    <h1 id="design-sys">Design Systems</h1><div id="bar"></div>
+                    <h2 id="design-sys">Design Systems</h2><div id="bar"></div>
                     <span id="design-desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda itaque harum modi quidem possimus ab alias provident, voluptas quam at aut commodi labore accusamus placeat tempore, aliquid fugiat quibusdam minima.</span>
                     <div id="t-b-contents"><span>table of contents</span></div>
                 </div>
                 <div id="logo-design">
                     <img id="des-log-img" src="https://res.cloudinary.com/indysigner/image/upload/v1542959380/shop/design-systems-hardcover-book.png"
-                    alt="" height="360" width="60%"/>
+                    alt="" />
                 </div>
             </article>
         </section>
@@ -517,7 +517,7 @@
                         <li><a href="#">css grid layouts</a></li>
                     </ul>
                 </section>
-                <section id="first-id">
+                <section id="first-id1">
                     <small>Guides</small><br><br>
                     <h2>Performance optimization and strategies</h2>
                     <ul class="dark-ul">
@@ -530,7 +530,7 @@
                         <li><a href="#">css grid layouts</a></li>
                     </ul>
                 </section>
-                <section id="first-id">
+                <section id="first-id2">
                     <small>Guides</small><br><br>
                     <h2>Improving workflow and data protection</h2>
                     <ul class="dark-ul">
@@ -548,7 +548,7 @@
         <section id="se-container">
             <article id="continue-curated-post">
                 <div id="cont">
-                    <section id="first-id">
+                    <section id="first-id3">
                         <small>Guides</small><br><br>
                         <h2>Design pattern and checklist</h2>
                         <ul class="dark-ul">
