--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <!-- begin main -->
         <section class="featured-articles-container">
             <!-- begin article-container-->
-            <h1 id="featured-articles-heading">
+            <h1 class="featured-articles-heading">
                 <span>
                     Don't miss these latest<br>
                 </span>
@@ -99,6 +99,7 @@
             </div>
 
             <article class="featured-article deep">
+                <h2 class="hidden">head</h2>
                 <!-- begin article-->
                 <a href="" class="anchor-wrap">
                     <div class="article-container">
@@ -120,6 +121,7 @@
             </article>
 
             <article class="featured-article soft">
+                <h2 class="hidden">head</h2>
                 <!-- begin article-->
                 <a href="#" class="anchor-wrap">
                     <div class="article-container">
@@ -142,6 +144,7 @@
             </article>
 
             <article class="featured-article soft-one">
+                <h2 class="hidden">head</h2>
                 <!-- begin article-->
                 <a href="#" class="anchor-wrap">
                     <div class="article-container">
@@ -162,6 +165,7 @@
                 <!-- end article-->
             </article>
             <article class="featured-article deep-one">
+                <h2 class="hidden">head</h2>
                 <!-- begin article-->
                 <a href="#" class="anchor-wrap">
                     <div class="article-container">
@@ -186,7 +190,9 @@
         </section>
         <section class="latest-post">
             <!--begin latest-post -->
+            <h2 class="hidden">head</h2>
             <section class="col-4">
+                <h2 class="hidden">head</h2>
                 <div class="section-container">
                     <span class="time-new"> 7 days ago</span>
                     <a href="" class="section-a">
@@ -200,6 +206,7 @@
                 </div>
             </section>
             <section class="col-4">
+                <h2 class="hidden">head</h2>
                 <div class="section-container">
                     <span class="time-new"> 7 days ago</span>
                     <a href="" class="section-a">
@@ -214,6 +221,7 @@
                 </div>
             </section>
             <section class="col-4">
+                <h2 class="hidden">head</h2>
                 <div class="section-container">
                     <span class="time-new"> 9 days ago</span>
                     <a href="" class="section-a">
@@ -229,6 +237,7 @@
             <!--end latest-post -->
         </section>
         <section class="col-4-8-container">
+            <h2 class="hidden">head</h2>
             <div class="col-four">
                 <section class="four-container">
                     <div class="cent-head"><head >our friends and supporters</head></div>
@@ -257,8 +266,10 @@
             </div>
         </section>
         <section class="latest-post">
+            <h2 class="hidden">head</h2>
             <!--begin latest-post -->
             <section class="col-4">
+                <h2 class="hidden">head</h2>
                 <div class="section-container">
                     <span class="time-new"> 7 days ago</span>
                     <a href="" class="section-a">
@@ -272,6 +283,7 @@
                 </div>
             </section>
             <section class="col-4">
+                <h2 class="hidden">head</h2>
                 <div class="section-container">
                     <span class="time-new"> 7 days ago</span>
                     <a href="" class="section-a">
@@ -284,6 +296,7 @@
                 </div>
             </section>
             <section class="col-4">
+                <h2 class="hidden">head</h2>
                 <div class="section-container">
                     <span class="time-new"> 9 days ago</span>
                     <a href="" class="section-a">
@@ -298,7 +311,9 @@
             <!--end latest-post -->
         </section>
         <section class="col-4-8-container">
-            <div class="col-four">
+            <h2 class="hidden">head</h2>
+            <article class="col-four">
+                <h2 class="hidden">head</h2>
                 <div class="col-4">
                     <div class="section-container">
                         <span class="time-new"> 7 days ago</span>
@@ -312,7 +327,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </article>
             <div class="col-eight">
                 <div class="eight-container">
                     <article class="icon-cont">
@@ -336,6 +351,7 @@
         </section>
 
         <section class="jump-stack">
+            <h2 class="hidden">head</h2>
             <div class="top-im">
                 <article id="center-tag">
                         <h2 class="comig-up">COMING UP NEXT - JULY 9 - 10</h2>
@@ -352,7 +368,9 @@
             </div>
         </section>
         <section class="community-links">
+            <h2 class="hidden">head</h2>
             <section class="main-community">
+                <h2 class="hidden">head</h2>
                 <img class="rotate-img" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
                 alt="" />
                 <article class="des-head">
@@ -365,7 +383,9 @@
                 </article>
             </section><br><br><br>
             <article class="others-comm">
+                <h2 class="hidden">head</h2>
                 <article class="other-comm-article">
+                    <h2 class="hidden">head</h2>
                     <figure id="my-fig">
                         <img id="other-img" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
                         alt=""/>
@@ -385,6 +405,7 @@
                     </p>
                 </article>
                 <article class="other-comm-article1">
+                    <h2 class="hidden">head</h2>
                     <figure id="my-fig1">
                         <img id="other-img1" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
                         alt=""/>
@@ -405,7 +426,9 @@
                 </article>
             </article><br><br>
             <section class="others-comm">
+                <h2 class="hidden">head</h2>
                 <article class="other-comm-article">
+                    <h2 class="hidden">head</h2>
                     <figure id="my-fig2">
                         <img id="other-img2" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
                         alt=""/>
@@ -425,6 +448,7 @@
                     </p>
                 </article>
                 <article class="other-comm-article1">
+                    <h2 class="hidden">head</h2>
                     <figure id="my-fig3">
                         <img id="other-img3" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
                         alt=""/>
@@ -445,7 +469,9 @@
                 </article>
             </section><br><br>
             <section class="others-comm">
+                <h2 class="hidden">head</h2>
                 <article class="other-comm-article">
+                    <h2 class="hidden">head</h2>
                     <figure id="my-fig4">
                         <img id="other-img4" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
                         alt=""/>
@@ -465,6 +491,7 @@
                     </p>
                 </article>
                 <article class="other-comm-article1">
+                    <h2 class="hidden">head</h2>
                     <figure id="my-fig5">
                         <img id="other-img5" src="https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/15cf5524-74db-4a81-a36a-d00f2ddf985c/philip-walton-250px-opt.png"
                         alt=""/>
@@ -485,11 +512,13 @@
                 </article>
             </section>
         </section>
-        <section class="more-liks-twitter"><span>More Links oN Twitter</span>
+        <section class="more-liks-twitter"><h2 class="hidden">head</h2><span>More Links oN Twitter</span>
             <div id="hori"></div>
         </section>
         <section class="design-systems">
+            <h2 class="hidden">head</h2>
             <article id="design-systems-container">
+                <h2 class="hidden">head</h2>
                 <div id="main-design">
                     <h3 id="feat-sys">Featured Smashing Book</h3>
                     <h2 id="design-sys">Design Systems</h2><div id="bar"></div>
@@ -503,7 +532,9 @@
             </article>
         </section>
         <section id="curated-post-id">
+            <h2 class="hidden">head</h2>
             <article id="curated-post-container">
+                <h2 class="hidden">head</h2>
                 <section id="first-id">
                     <small>Guides</small><br><br>
                     <h2>New frontend challenges to master</h2>
@@ -546,7 +577,9 @@
             </article>
         </section>
         <section id="se-container">
+            <h2 class="hidden">head</h2>
             <article id="continue-curated-post">
+                <h2 class="hidden">head</h2>
                 <div id="cont">
                     <section id="first-id3">
                         <small>Guides</small><br><br>
@@ -564,7 +597,8 @@
                 </div>
             </article>
             <article id="continue-icon">
-                <div id="cont">
+                <h2 class="hidden">head</h2>
+                <div id="cont1">
                     <h2>Smashing Newsletter</h2>
                     <p id="imagine">Imagine you wrote a beautiful song and no one discovered it.
                         That will make any cat sad.
@@ -584,6 +618,7 @@
             </article>
         </section>
         <section class="space-white">
+            <h2 class="hidden">head</h2>
             <article id="space-white">
                 <h3 class="h3-art-head">See all articles</h3>
                 <div class="bar"></div>
@@ -591,13 +626,14 @@
         </section>
         <!-- end main -->
     </main>
-    <footer id="myfooter">
+    <footer class="myfooter">
         <!-- begin footer-->
         <div id="footer-container">
             <div id="browse-smash-magazine">
                 <span>Browse all smashing magazines topics</span>
             </div>
             <section id="my-cont" class="my-cont">
+                <h2 class="hidden">head</h2>
                 <ul id="ul-container">
                     <li><a href="#">Accessibilty</a></li>
                     <li><a href="#">More</a></li>
@@ -609,7 +645,7 @@
                     <li><a href="#">Design Patterns</a></li>
                     <li><a href="#">E-Commerce</a></li>
                 </ul>
-                <ul id="ul-container">
+                <ul id="ul-container1">
                     <li><a href="#">Freebies</a></li>
                     <li><a href="#">Graphics</a></li>
                     <li><a href="#">HTML</a></li>
@@ -620,7 +656,7 @@
                     <li><a href="#">Mobile</a></li>
                     <li><a href="#">Pattern Libraries</a></li>
                 </ul>
-                <ul id="ul-container">
+                <ul id="ul-container2">
                     <li><a href="#">Performance</a></li>
                     <li><a href="#">Photoshop</a></li>
                     <li><a href="#">Plugins</a></li>
@@ -629,7 +665,7 @@
                     <li><a href="#">Service Workers</a></li>
                     <li><a href="#">Sketch</a></li>
                 </ul>
-                <ul id="ul-container">
+                <ul id="ul-container3">
                     <li><a href="#">Typography</a></li>
                     <li><a href="#">UI</a></li>
                     <li><a href="#">Usability</a></li>
